--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-av==10.0.0
-joblib==1.2.0
-keras_facenet==0.3.2
-numpy==1.23.5
-opencv-python-headless==4.5.3.56
-streamlit==1.27.2
-streamlit_webrtc==0.47.1
-ultralytics==8.0.199
+av
+joblib
+keras_facenet
+numpy
+opencv-python-headless
+streamlit
+streamlit_webrtc
+ultralytics
+tensorflow
+scikit-learn
